# Audio-Fingeprint-Engine

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt
core/audio/: CMakeLists.txt  wav_parser.cpp  wav_parser.hpp
core/dsp/: CMakeLists.txt  peak_extractor.hpp  stft.hpp
core/fingerprint/: CMakeLists.txt  database.cpp  database.hpp  hasher.cpp  hasher.hpp  matcher.cpp  matcher.hpp
tests/: CMakeLists.txt  test_wav_parser.cpp
tools/: CMakeLists.txt  indexer.cpp  query.cpp  wav_info.cpp
